--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,18 +4,18 @@
     "short_name": "GoI",
     "icons": [
         {
-            "src": "/next.svg",
+            "src": "/img/icon.png",
             "sizes": "192x192",
             "type": "image/png",
             "purpose": "maskable"
         },
         {
-            "src": "/next.svg",
+            "src": "/img/icon.png",
             "sizes": "384x384",
             "type": "image/png"
         },
         {
-            "src": "/next.svg",
+            "src": "/img/icon.png",
             "sizes": "512x512",
             "type": "image/png"
         }
